tests/NormalTests/paczka1/fuzzy1/52370917.err
Error in line 4: G0t37KRbaH S389 ~5,7
Error in line 9: 3Txb A699 19,7
Error in line 19: oV4uRpq S389 13,5
Error in line 21: oV4uRpq A580 43,4
Error in line 15: 3Txb A498 1,3
